<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolbar"
    app:layout_constraintBottom_toTopOf="@id/nav_view"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <ScrollView
        android:id="@+id/user_profile"
        android:layout_width="match_parent"
        android:background="@color/bodyBackgroundColor"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/user_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/textBlack"
                android:layout_marginBottom="10dp"
                android:text="@string/user_name" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textGrey"
                android:layout_marginBottom="10dp"
                android:text="" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/user_email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/textBlack"
                android:layout_marginBottom="10dp"
                android:text="@string/profile_username" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textGrey"
                android:layout_marginBottom="10dp"
                android:text="" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/user_phone_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/textBlack"
                android:layout_marginBottom="10dp"
                android:text="@string/user_phone" />

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textGrey"
                android:layout_marginBottom="10dp"
                android:text="@string/n_a" />


            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginBottom="24dp" />

            <TextView
                android:id="@+id/password_label"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textBlack"
                android:layout_marginBottom="10dp"
                android:text="@string/set_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/current_password_layout"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/current_password"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_password"
                    android:ems="10"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/new_password_layout"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/new_password"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:ems="10"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/confirm_new_password_layout"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/confirm_new_password"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_new_password"
                    android:ems="10"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/edit_button"
                android:enabled="false"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/edit"
                android:textSize="16sp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textAllCaps="false"
                android:textColor="@color/buttonTextColor" />

            <ProgressBar
                android:id="@+id/edit_progress"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/pin_label"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/textBlack"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/set_pin" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/current_pin_layout"
                android:visibility="gone"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/current_pin"
                    android:maxLength="4"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_pin"
                    android:ems="10"
                    android:inputType="numberPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/new_pin_layout"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/new_pin"
                    android:maxLength="4"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_pin"
                    android:ems="10"
                    android:inputType="numberPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/confirm_new_pin_layout"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/confirm_new_pin"
                    android:maxLength="4"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_new_pin"
                    android:ems="10"
                    android:inputType="numberPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_button"
                android:enabled="false"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/save"
                android:textSize="16sp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"
                android:textColor="@color/buttonTextColor" />

            <ProgressBar
                android:id="@+id/save_progress"
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/logout_button"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_logout"
                android:text="@string/logout"
                android:textSize="16sp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginBottom="24dp"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>