<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.NoActionBar"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_collapseMode="pin"
        app:title="">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/trips"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabBar"
        android:background="@color/textWhite"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="4dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:tabMode="fixed"
        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
        app:tabTextColor="@color/textWhite"
        app:tabBackground="@color/tabBackground"
        >
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tripsDone"
            android:layout_width="wrap_content"
            android:text="@string/trips_done"
            android:layout_height="wrap_content" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tripsActive"
            android:layout_width="wrap_content"
            android:text="@string/trips_active"
            android:layout_height="wrap_content" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tripsProceed"
            android:layout_width="wrap_content"
            android:text="@string/trips_proceed"
            android:layout_height="wrap_content" />
    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/no_trips_label"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabBar"
        android:layout_height="wrap_content"
        android:text="@string/no_trips_label"
        />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:background="@color/bodyBackgroundColor"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabBar"
        app:layout_constraintBottom_toTopOf="@id/trip_nav_view"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/activity_main_swipe"
        tools:context=".MainActivity">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/booking_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/trip_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        android:theme="@style/BottomNav"
        app:elevation="0dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:elevation="0dp"
        android:focusable="true"
        app:fabCustomSize="64dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:maxImageSize="24dp"
        android:src="@drawable/ic_send"
        />
</androidx.constraintlayout.widget.ConstraintLayout>