<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activity.LoginActivity"
    android:theme="@style/AppTheme.NoActionBar">

        <TextView
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/textWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/app_name_drivers"
            tools:layout_editor_absoluteY="0dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorWhite"
            android:elevation="8dp"
            app:cardCornerRadius="5dp"
            app:contentPaddingTop="16dp"
            app:contentPaddingBottom="16dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/imageView2"
            app:layout_constraintTop_toBottomOf="@id/textView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/textView3"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/textBlack"
                    android:text="@string/personal_area"
                    android:textSize="25sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/editTextLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView3"
                    android:layout_marginTop="24dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/editText"
                        android:drawableStart="@drawable/ic_profile"
                        android:paddingBottom="16dp"
                        android:drawablePadding="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_username"
                        android:ems="10"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/editText2Layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextLayout"
                    android:layout_marginTop="24dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/editText2"
                        android:drawableStart="@drawable/ic_key"
                        android:drawablePadding="8dp"
                        android:paddingBottom="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:ems="10"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/button"
                    android:text="@string/enter"
                    android:textSize="25sp"
                    android:textAllCaps="false"
                    android:textColor="@color/buttonTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editText2Layout" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:visibility="invisible"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@id/editText2Layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logo_"
            tools:layout_editor_absoluteY="-2dp"
            android:contentDescription="@string/app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>